# prompthound

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: secret_scanning.yml
.github/workflows/: ci.yml
examples/: vulnerable_app.js  vulnerable_app.py
prompthound/: __init__.py  cli.py  rules.py  scanner.py
tests/: test_scanner.py
